# SCGBinner

./: README.md  pyproject.toml
SCGBinner/: cluster.py  get_final_result.py  main.py  marker_search.py  run_scgbinner.sh  simclr.py  train_CLmodel.py  utils.py  wrapper.py
SCGBinner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
SCGBinner/data_aug/: gen_cov.py  gen_kmer.py  generate_augfasta_and_saveindex.py
SCGBinner/train/: complete  gene  noncoding  pwm  rgene  start  start1  stop  stop1
