[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SCGBinner"
version = "1.0.0"
description = "SCG-guided metagenomic binning tool"
authors = [
    {name = "Haitao Han", email= "22110850021@m.fudan.edu.cn"}
]
dependencies = [
    "numpy",
    "pandas"
]

[project.scripts]
scgbinner = "SCGBinner.wrapper:main"

[tool.setuptools]
packages = ["SCGBinner"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
SCGBinner = ["*.sh", "fraggenescan", "hmmsearch", "markers.hmm","data_aug/*", "models/*", "scripts/*"]

